[package]
name = "minecraft_nether_generation"
version = "0.3.3"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description = "The minecraft nether generation implemented in rust"
categories = ["algorithms", "data-structures"]
license = "MIT"

[dependencies]
java_random = "0.1.6"
noise_rs = "0.1.13"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cbindgen = "0.17.0"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "example"
path = "src/bin.rs"

[lib]
name = "minecraft_nether_gen_rs"
crate-type = ["cdylib", "rlib", "staticlib"] # cdylib to make the shared library and rlib to link against bin.rs