[package]
name = "minecraft_nether_generation"
version = "0.3.5"
authors = ["Neil <neilhube12@gmail.com>"]
edition = "2018"
description = "The minecraft nether generation implemented in rust"
categories = ["algorithms", "data-structures"]
license = "MIT"

[dependencies]
java_random = { version = "0.1.7", default-features = false }
noise_rs = { version = "0.1.16", default-features = false }

# We don't need those dependencies here
#[features]
#default = ["const_fn"]
#const_fn = ["java_random/const_fn", "noise_rs/const_fn"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dev-dependencies]
criterion = "0.3"

[build-dependencies]
cbindgen = "0.17.0"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "example"
path = "src/bin.rs"

[lib]
name = "minecraft_nether_gen_rs"
crate-type = ["cdylib", "rlib", "staticlib"] # cdylib to make the shared library and rlib to link against bin.rs